--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
 <body>
 	<header>
 		<nav>
-			<ul><li><a class="New" href="#">New</a></li></ul>
+		<h1 class="Title">Capital City Quiz</h1>
+		<p><a class="Start" href="#">Start</a></p>
 		</nav>
 	</header>
-	<div class="Questions"><p>Questions</p></div>
-	<div class="Answers"><p>Answers</p></div>
-	<div class="Narrative"><p>Narrative</p></div>
+	<div class="PlayArea">
+		<div class="Questions"><p>Questions</p></div>
+		<div class="Answers"><p>Answers</p></div>
+		<div class="buttonClass">
+			<button type="button" class="btn">Next Question!</button>
+		</div>
+	</div>
 </body>
 </html>
