--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 		</nav>
 	</header>
 	<div class="PlayArea">
-		<div class="Questions"><p>Questions</p></div>
-		<div class="Answers"><p>Answers</p></div>
+		<div class="Questions"></div>
 		<div class="buttonClass">
 			<button type="button" class="btn">Next Question!</button>
 		</div>
