--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</header>
 	<div class="PlayArea">
 		<div class="Questions"></div>
-		<div class="Answers"></div>
+		<div class="Answers"><form></form></div>
 		<div class="buttonClass">
 			<button type="button" class="btn">Next Question!</button>
 		</div>
